<resources>
    <string name="app_name">AppListaCurso</string>
    <string name="txt_titulo">Aplicativo Lista VIP Curso Android</string>
    <string name="txt_hint_edit_primeiro_nome">Primeiro Nome</string>
    <string name="txt_hint_edit_sobrenome">Sobrenome</string>
    <string name="txt_hint_edit_nome_curso">Nome do Curso Desejado</string>
    <string name="txt_hint_telefone">Telefone de Contato</string>
    <string name="txt_btn_limpar">LIMPAR</string>
    <string name="txt_btn_salvar">SALVAR</string>
    <string name="txt_btn_finalizar">FINALIZAR</string>
</resources>